[layers1] - modular plugin loading