@@ -5,16 +5,34 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
+repositories {
+    mavenCentral()
+}
+
+configurations {
+    localDeps
+    localDeps.transitive = false
+}
+
 dependencies {
-    implementation project(":server")
+    compileOnly project(":server")
+    localDeps 'com.google.guava:guava:31.0.1-jre'
+    configurations.getByName("compileOnly").extendsFrom(configurations.getByName("localDeps"))
 }
 
 compileJava {
     doFirst {
         options.compilerArgs += [
                 '--module-path', classpath.asPath,
-                '--add-modules', "com.example.server"
+                '--add-modules', "com.example.server,com.google.common",
+               // '--add-exports', 'com.example.server/com.example.server.internal=ESServer.analysis.plugin.main'
         ]
         classpath = files()
     }
 }
+
+def copy = task copyDependencies(type: Copy) {
+    from configurations.localDeps
+    into "$buildDir/deps/libs"
+}
+tasks.getByName("build").dependsOn(copy)
